crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@339.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(1,8)) - nummultirange(numrange(2,3), numrange(5,null));"
---
SelectStmt@0..85
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..82
    AExpr@7..82
      FuncCall@7..33
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "1"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "8"
      Ascii41@33..34 ")"
      Ascii41@34..35 ")"
      Whitespace@35..36 " "
      Ascii45@36..37 "-"
      Whitespace@37..38 " "
      FuncCall@38..82
        Ident@38..51 "nummultirange"
        Ascii40@51..52 "("
        FuncCall@52..64
          Ident@52..60 "numrange"
          Ascii40@60..61 "("
          AConst@61..62
            Iconst@61..62 "2"
          Ascii44@62..63 ","
          AConst@63..64
            Iconst@63..64 "3"
        Ascii41@64..65 ")"
        Ascii44@65..66 ","
        Whitespace@66..67 " "
        FuncCall@67..82
          Ident@67..75 "numrange"
          Ascii40@75..76 "("
          AConst@76..77
            Iconst@76..77 "5"
          Ascii44@77..78 ","
          AConst@78..82
            NullP@78..82 "null"
  Ascii41@82..83 ")"
  Ascii41@83..84 ")"
  Ascii59@84..85 ";"

